# neujson

./: .all-contributorsrc  .bazelrc  .dockerignore  .gitattributes  .gitignore  .gitmodules  BUILD.bazel  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  README_zh.md  WORKSPACE  build.cmake  docker-bake.hcl  main.cc  neujson.bzl  neujson.pc.in  neujsonConfig.cmake.in  neujsonConfigVersion.cmake.in
.clusterfuzzlite/: Dockerfile  build.sh  doc_fuzzer.cpp
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: code_ql_analysis.yml  docker-publish.yml  registry.json
CMakeModules/: cmake_uninstall.cmake.in  neujsonConfig.cmake.in
bench/: CMakeLists.txt  bench_parse.cc
benchmark/: benchmark.h  hominsu_neujson.cc
cmake/: ExtProjectUtils.cmake
docker/: Dockerfile  docker-bake.hcl
docs/: README.md  _coverpage.md  _navbar.md  _sidebar.md  index.html
docs/sample/: dom.md  error_handling.md  generator.md  parser.md  pretty.md  stream.md  struct.md
docs/zh-cn/: README.md  README_zh.md  _coverpage.md  _sidebar.md
docs/zh-cn/sample/: dom.md  error_handling.md  generator.md  parser.md  pretty.md  stream.md  struct.md
example/: BUILD.bazel  CMakeLists.txt  create_json.cc  document.cc  file.cc  parse.cc  pretty.cc  sample.cc  sample.h  stream_wrapper.cc  struct.cc
example/create_json/: create_json.cc
example/document/: document.cc
example/file/: file.cc
example/parse/: parse.cc
example/pretty/: pretty.cc
example/stream_wrapper/: stream_wrapper.cc
example/struct/: struct.cc
include/neujson/: CMakeLists.txt  document.cc  document.h  exception.h  file_read_stream.h  file_write_stream.h  istream_wrapper.h  neujson.h  non_copyable.h  ostream_wrapper.h  pretty_writer.h  reader.cc  reader.h  string_read_stream.h  string_write_stream.h  value.cc  value.h  writer.h
include/neujson/internal/: big_integer.h  cllzl.h  diy_fp.h  ieee754.h  itoa.h  pow10.h  strtod.h
neujson/: CMakeLists.txt  document.cc  document.h  exception.h  file_read_stream.h  file_write_stream.h  noncopyable.h  pretty_writer.h  reader.cc  reader.h  string_read_stream.h  string_write_stream.h  value.cc  value.h  writer.h
neujson/internal/: cllzl.h  itoa.h
test/: BUILD.bazel  CMakeLists.txt  clzll_test.cc  itoa_test.cc  parse_test.cc  round_trip.cc  strtod_test.cc
test/unit_test/: BUILD.bazel  CMakeLists.txt  clzll_test.cc  itoa_test.cc  parse_test.cc  round_trip.cc  strtod_test.cc  unit_test.cc  unit_test.h
