load("@pers_hominsu_neujson//:neujson.bzl", "neujson")

package(default_visibility = ["//visibility:public"])

COPTS = neujson.copts(
    extra_error = True,
    native = True,
)

cc_binary(
    name = "create_json",
    srcs = ["create_json/create_json.cc"],
    copts = COPTS,
    deps = ["@pers_hominsu_neujson//:neujson"],
)

cc_binary(
    name = "document",
    srcs = [
        "document/document.cc",
        "sample.h",
    ],
    copts = COPTS,
    deps = ["@pers_hominsu_neujson//:neujson"],
)

cc_binary(
    name = "file",
    srcs = ["file/file.cc"],
    copts = COPTS,
    deps = ["@pers_hominsu_neujson//:neujson"],
)

cc_binary(
    name = "parse",
    srcs = ["parse/parse.cc"],
    copts = COPTS,
    deps = ["@pers_hominsu_neujson//:neujson"],
)

cc_binary(
    name = "pretty",
    srcs = [
        "pretty/pretty.cc",
        "sample.h",
    ],
    copts = COPTS,
    deps = ["@pers_hominsu_neujson//:neujson"],
)

cc_binary(
    name = "stream_wrapper",
    srcs = [
        "sample.h",
        "stream_wrapper/stream_wrapper.cc",
    ],
    copts = COPTS,
    deps = ["@pers_hominsu_neujson//:neujson"],
)

cc_binary(
    name = "struct",
    srcs = ["struct/struct.cc"],
    copts = COPTS,
    deps = ["@pers_hominsu_neujson//:neujson"],
)
