load("@pers_hominsu_neujson//:neujson.bzl", "neujson")

package(default_visibility = ["//visibility:public"])

COPTS = neujson.copts(
    extra_error = True,
    native = True,
)

cc_test(
    name = "unit_test",
    srcs = glob([
        "unit_test/*.cc",
        "unit_test/*.h",
    ]),
    copts = COPTS,
    deps = [
        "@com_google_googletest//:gtest_main",
        "@pers_hominsu_neujson//:neujson",
    ],
)
